# Copyright (C) 2013 Automatak, LLC

AM_CXXFLAGS = -std=c++11 -I ../

lib_LTLIBRARIES = libapltesttools.la

libapltesttools_la_SOURCES = \
	AsyncPhysTestObject.cpp \
	AsyncTestObjectASIO.cpp \
	AsyncTestObject.cpp \
	BufferHelpers.cpp \
	BufferTestObject.cpp \
	LogTester.cpp \
	LoopbackPhysicalLayerAsync.cpp \
	MockExecutor.cpp \
	MockLowerLayer.cpp \
	MockPhysicalLayerAsync.cpp \
	MockPhysicalLayerMonitor.cpp \
	MockUpperLayer.cpp \
	PhysicalLayerWrapper.cpp \
	StopWatch.cpp \
	Timeout.cpp \
	WrappedTcpPipe.cpp 
