# Copyright (C) 2013 Automatak, LLC

AM_CXXFLAGS = -std=c++11

lib_LTLIBRARIES = libopendnp3.la

libopendnp3_la_SOURCES = \
	AnalogOutput.cpp \
	APDUConstants.cpp \
	APDU.cpp \
	AppChannelStates.cpp \
	AppHeader.cpp
	AppInterfaces.cpp
	AppLayerChannel.cpp
	AppLayer.cpp
	ApplicationStack.cpp
	ASIOExecutor.cpp
	ASIOSerialHelpers.cpp
	AsyncLayerInterfaces.cpp
	AsyncTaskBase.cpp
	AsyncTaskContinuous.cpp
	AsyncTaskGroup.cpp
	AsyncTaskNonPeriodic.cpp
	AsyncTaskPeriodic.cpp
	AsyncTaskScheduler.cpp
	BaseDataTypes.cpp
	BufferTypes.cpp
	ChangeBuffer.cpp
	ClassCounter.cpp
	CommandStatus.cpp
	CommandTask.cpp
	ConstantCommandProcessor.cpp
	ControlRelayOutputBlock.cpp
	CopyableBuffer.cpp
	CRC.cpp
	Database.cpp
	DataPoll.cpp
	DestructorHook.cpp
	DeviceTemplate.cpp
	DNP3Channel.cpp
	DNP3Manager.cpp
	DNPCrc.cpp
	EnhancedVto.cpp
	EnhancedVtoRouter.cpp
	Exception.cpp
	ExecutorPause.cpp
	FlexibleDataObserver.cpp
	HeaderReadIterator.cpp
	IExecutor.cpp
	IHandlerAsync.cpp
	IndexedWriteIterator.cpp
	IOServiceThreadPool.cpp
	IStack.cpp
	IStackObserver.cpp
	ITimeSource.cpp
	LinkFrame.cpp
	LinkHeader.cpp
	LinkLayerConstants.cpp
	LinkLayer.cpp
	LinkLayerReceiver.cpp
	LinkLayerRouter.cpp
	LinkReceiverStates.cpp
	LinkRoute.cpp
	Log.cpp
	LogEntryCircularBuffer.cpp
	LogEntry.cpp
	Loggable.cpp
	Logger.cpp
	LogToFile.cpp
	LogToStdio.cpp
	LogTypes.cpp
	LowerLayerToPhysAdapter.cpp
	Master.cpp
	MasterSchedule.cpp
	MasterStackImpl.cpp
	MasterStates.cpp
	MasterTaskBase.cpp
	MultiplexingDataObserver.cpp
	ObjectHeader.cpp
	ObjectInterfaces.cpp
	ObjectReadIterator.cpp
	Objects.cpp
	ObjectWriteIterator.cpp
	OutstationStackImpl.cpp
	PackingUnpacking.cpp
	Parsing.cpp
	PhysicalLayerAsyncBase.cpp
	PhysicalLayerAsyncBaseTCP.cpp
	PhysicalLayerAsyncSerial.cpp
	PhysicalLayerAsyncTCPClient.cpp
	PhysicalLayerAsyncTCPServer.cpp
	PhysicalLayerMonitor.cpp
	PhysicalLayerMonitorStates.cpp
	PhysicalLayerStates.cpp
	PhysLoopback.cpp
	PointClass.cpp
	PriLinkLayerStates.cpp
	ProtocolUtil.cpp
	QualityConverter.cpp
	QueuedCommandProcessor.cpp
	RandomizedBuffer.cpp
	ResponseContext.cpp
	ResponseLoader.cpp
	SecLinkLayerStates.cpp
	ShiftableBuffer.cpp
	SimpleCommandHandler.cpp
	SimpleDataObserver.cpp
	SlaveConfig.cpp
	Slave.cpp
	SlaveEventBuffer.cpp
	SlaveResponseTypes.cpp
	SlaveStates.cpp
	SolicitedChannel.cpp
	StartupTasks.cpp
	SubjectBase.cpp
	Threadable.cpp
	Thread.cpp
	TimerASIO.cpp
	TimeSource.cpp
	TLS_Base.cpp
	ToHex.cpp
	TrackingTaskGroup.cpp
	TransportLayer.cpp
	TransportRx.cpp
	TransportStates.cpp
	TransportTx.cpp
	UnsolicitedChannel.cpp
	Util.cpp
	VtoData.cpp
	VtoEndpointImpl.cpp
	VtoReader.cpp
	VtoRouter.cpp
	VtoRouterSettings.cpp
	VtoTransmitTask.cpp
	VtoWriter.cpp

