cmake_minimum_required (VERSION 3.8.2)

enable_language(CSharp)

#set(DOTNET_TARGET_FRAMEWORK_VERSION "v4.5.2")
#message("default version: ${DOTNET_TARGET_FRAMEWORK_VERSION}")

add_library(DNP3CLRInterface SHARED
bindings/CLRInterface/ApplicationIIN.cs
bindings/CLRInterface/BaseMeasurementTypes.cs
bindings/CLRInterface/ChangeSet.cs
bindings/CLRInterface/ChannelRetry.cs
bindings/CLRInterface/ChannelStatistics.cs
bindings/CLRInterface/ClassAssignment.cs
bindings/CLRInterface/ClassField.cs
bindings/CLRInterface/CommandResultTypes.cs
bindings/CLRInterface/CommandSet.cs
bindings/CLRInterface/CommandTypes.cs
bindings/CLRInterface/DefaultListenCallbacks.cs
bindings/CLRInterface/Extensions.cs
bindings/CLRInterface/Header.cs
bindings/CLRInterface/IChannel.cs
bindings/CLRInterface/IChannelListener.cs
bindings/CLRInterface/IChannelStatistics.cs
bindings/CLRInterface/ICommandHandler.cs
bindings/CLRInterface/ICommandProcessor.cs
bindings/CLRInterface/IDNP3Manager.cs
bindings/CLRInterface/IDatabase.cs
bindings/CLRInterface/ILinkListener.cs
bindings/CLRInterface/IListenCallbacks.cs
bindings/CLRInterface/IListener.cs
bindings/CLRInterface/ILogHandler.cs
bindings/CLRInterface/IMaster.cs
bindings/CLRInterface/IMasterApplication.cs
bindings/CLRInterface/IMasterOperations.cs
bindings/CLRInterface/IMasterScan.cs
bindings/CLRInterface/IMasterSession.cs
bindings/CLRInterface/IOutstation.cs
bindings/CLRInterface/IOutstationApplication.cs
bindings/CLRInterface/IPEndpoint.cs
bindings/CLRInterface/IQualityBitInfo.cs
bindings/CLRInterface/ISOEHandler.cs
bindings/CLRInterface/ISessionAcceptor.cs
bindings/CLRInterface/IStack.cs
bindings/CLRInterface/IStackStatistics.cs
bindings/CLRInterface/ITaskCallback.cs
bindings/CLRInterface/LinkHeader.cs
bindings/CLRInterface/LogLevels.cs
bindings/CLRInterface/MeasurementTypes.cs
bindings/CLRInterface/NamespaceDoc.cs
bindings/CLRInterface/PrintingSOEHandler.cs
bindings/CLRInterface/RestartResultType.cs
bindings/CLRInterface/SimpleCommandHandler.cs
bindings/CLRInterface/StackStatistics.cs
bindings/CLRInterface/TLSConfig.cs
bindings/CLRInterface/TaskCompletionProxy.cs
bindings/CLRInterface/TaskConfig.cs
bindings/CLRInterface/TaskId.cs
bindings/CLRInterface/TaskInfo.cs
bindings/CLRInterface/Timestamp.cs
bindings/CLRInterface/X509Info.cs
bindings/CLRInterface/config/DatabaseTemplate.cs
bindings/CLRInterface/config/EventBufferConfig.cs
bindings/CLRInterface/config/LinkConfig.cs
bindings/CLRInterface/config/MasterConfig.cs
bindings/CLRInterface/config/MasterStackConfig.cs
bindings/CLRInterface/config/OutstationConfig.cs
bindings/CLRInterface/config/OutstationParams.cs
bindings/CLRInterface/config/OutstationStackConfig.cs
bindings/CLRInterface/config/PointRecords.cs
bindings/CLRInterface/config/SerialSettings.cs
bindings/CLRInterface/config/StaticTypeBitfield.cs
bindings/CLRInterface/gen/AnalogOutputStatusQuality.cs
bindings/CLRInterface/gen/AnalogQuality.cs
bindings/CLRInterface/gen/AssignClassType.cs
bindings/CLRInterface/gen/BinaryOutputStatusQuality.cs
bindings/CLRInterface/gen/BinaryQuality.cs
bindings/CLRInterface/gen/ChannelState.cs
bindings/CLRInterface/gen/CommandPointState.cs
bindings/CLRInterface/gen/CommandStatus.cs
bindings/CLRInterface/gen/ControlCode.cs
bindings/CLRInterface/gen/CounterQuality.cs
bindings/CLRInterface/gen/DoubleBit.cs
bindings/CLRInterface/gen/DoubleBitBinaryQuality.cs
bindings/CLRInterface/gen/EventAnalogOutputStatusVariation.cs
bindings/CLRInterface/gen/EventAnalogVariation.cs
bindings/CLRInterface/gen/EventBinaryOutputStatusVariation.cs
bindings/CLRInterface/gen/EventBinaryVariation.cs
bindings/CLRInterface/gen/EventCounterVariation.cs
bindings/CLRInterface/gen/EventDoubleBinaryVariation.cs
bindings/CLRInterface/gen/EventFrozenCounterVariation.cs
bindings/CLRInterface/gen/EventMode.cs
bindings/CLRInterface/gen/EventOctetStringVariation.cs
bindings/CLRInterface/gen/EventSecurityStatVariation.cs
bindings/CLRInterface/gen/FlagsType.cs
bindings/CLRInterface/gen/FlowControl.cs
bindings/CLRInterface/gen/FrozenCounterQuality.cs
bindings/CLRInterface/gen/FunctionCode.cs
bindings/CLRInterface/gen/GroupVariation.cs
bindings/CLRInterface/gen/IINField.cs
bindings/CLRInterface/gen/ILinkStatusListener.cs
bindings/CLRInterface/gen/IndexMode.cs
bindings/CLRInterface/gen/IndexQualifierMode.cs
bindings/CLRInterface/gen/IntervalUnits.cs
bindings/CLRInterface/gen/KeyChangeMethod.cs
bindings/CLRInterface/gen/KeyWrapAlgorithm.cs
bindings/CLRInterface/gen/LinkFunction.cs
bindings/CLRInterface/gen/LinkStatus.cs
bindings/CLRInterface/gen/MasterTaskType.cs
bindings/CLRInterface/gen/OperateType.cs
bindings/CLRInterface/gen/Parity.cs
bindings/CLRInterface/gen/PointClass.cs
bindings/CLRInterface/gen/QualifierCode.cs
bindings/CLRInterface/gen/RestartMode.cs
bindings/CLRInterface/gen/RestartType.cs
bindings/CLRInterface/gen/ServerAcceptMode.cs
bindings/CLRInterface/gen/StaticAnalogOutputStatusVariation.cs
bindings/CLRInterface/gen/StaticAnalogVariation.cs
bindings/CLRInterface/gen/StaticBinaryOutputStatusVariation.cs
bindings/CLRInterface/gen/StaticBinaryVariation.cs
bindings/CLRInterface/gen/StaticCounterVariation.cs
bindings/CLRInterface/gen/StaticDoubleBinaryVariation.cs
bindings/CLRInterface/gen/StaticFrozenCounterVariation.cs
bindings/CLRInterface/gen/StaticOctetStringVariation.cs
bindings/CLRInterface/gen/StaticSecurityStatVariation.cs
bindings/CLRInterface/gen/StaticTimeAndIntervalVariation.cs
bindings/CLRInterface/gen/StaticTypeBitmask.cs
bindings/CLRInterface/gen/StopBits.cs
bindings/CLRInterface/gen/TaskCompletion.cs
bindings/CLRInterface/gen/TimeSyncMode.cs
bindings/CLRInterface/gen/TimestampMode.cs
bindings/CLRInterface/gen/UserOperation.cs
bindings/CLRInterface/gen/UserRole.cs
)

set_target_properties(DNP3CLRInterface PROPERTIES FOLDER dotnet)
set_property(TARGET DNP3CLRInterface PROPERTY VS_DOTNET_REFERENCES "System.Xml")
set_property(TARGET DNP3CLRInterface PROPERTY VS_DOTNET_TARGET_FRAMEWORK_VERSION "v4.5.2")
target_compile_options(DNP3CLRInterface PRIVATE "/langversion:6")
